# warcraftlogs_project

./: .gitignore  .pre-commit-config.yaml  CONSUMABLES_FEATURE.md  DEVELOPER.md  README.md  TODO_10MAN_DETECTION.md  WCL Analyzer.bat  alt.py  build_release.sh  characters.json  config.example.json  config.json  consumes_config.json  debuff_config.json  installer.iss  interrupt_config.json  launcher.py  manage_spells.py  new.txt  output.txt  pyproject.toml  report copy.md  report.md  report_dump.json  report_old.md  requirements.txt  secrets.txt  totem_config.json  vulture_whitelist.py  warcraftlogs_analyzer.spec
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: build-installer.yml  ci.yml
guides/: TESTING.md
reports/: 2025-04-09.md  healing_report.md  perfect.md  summary_report.md  toads_BWL_11_6_25.md  toads_BWL_4_6_25.md  toads_MC_11_6_25.md
spell_data/: README.md  spell_aliases.json  spell_names.json
tests/: conftest.py  test_analysis.py  test_api_surface.py  test_aura_uptime.py  test_auth.py  test_cache.py  test_cancelled_casts.py  test_cli.py  test_client.py  test_common_data.py  test_config.py  test_consumes_analysis.py  test_database.py  test_database_extended.py  test_dynamic_role_parser.py  test_encounters.py  test_errors.py  test_interrupts.py  test_markdown_renderer.py  test_models.py  test_my_character.py  test_paths.py  test_raid_diff.py  test_rate_limiting.py  test_reference_reports.py  test_renderers.py  test_security.py  test_spell_manager.py  test_table_models.py  test_totem_uptime.py  test_user_auth.py
tests/features/: auth.feature  cli.feature  configuration.feature  consumables.feature  database.feature  encounter_analysis.feature  raid_analysis.feature  reference_reports.feature  report_export.feature  user_auth.feature
tests/fuzz/: conftest.py  test_cache_fuzzing.py  test_config_fuzzing.py  test_model_fuzzing.py  test_spell_manager_fuzzing.py
tests/gui/: conftest.py  test_download_view.py  test_main_window.py  test_nav_stack.py  test_raid_analysis_widget.py  test_raids_view.py  test_settings_view.py  test_table_models.py
tests/integration/: conftest.py  test_delete_cascade.py  test_full_pipeline.py  test_live_api.py  test_reference_workflow.py  test_reimport_idempotency.py
tests/step_defs/: conftest.py  test_auth.py  test_cli.py  test_configuration.py  test_consumables.py  test_database.py  test_encounter_analysis.py  test_raid_analysis.py  test_reference_reports.py  test_report_export.py  test_user_auth.py
warcraftlogs_client/: analysis.py  auth.py  cache.py  character_api.py  characters.py  cli.py  client.py  config.py  consumes_analysis.py  database.py  dump_report.py  dynamic_role_parser.py  healing.py  loader.py  main.py  markdown_exporter.py  melee_main.py  models.py  new_main.py  paths.py  ranged_main.py  rendered_example_report.md  spell_breakdown.py  spell_breakdown_OLD.py  spell_manager.py  tank_main.py  updater.py  user_auth.py
warcraftlogs_client/common/: data.py  errors.py  metadata.py
warcraftlogs_client/gui/: analysis_helpers.py  analyze_view.py  app.py  boss_insights_view.py  character_history_widget.py  character_view.py  charts.py  compare_view.py  detail_panel.py  download_view.py  find_character_view.py  history_view.py  insights_view.py  main_window.py  nav_stack.py  raid_analysis_widget.py  raid_cross_analysis_widget.py  raid_diff_view.py  raid_group_view.py  raid_list_widget.py  raids_view.py  reference_view.py  settings_view.py  styles.py  table_models.py  update_dialog.py  worker.py
warcraftlogs_client/renderers/: console.py  markdown.py
warcraftlogs_client/roles/: healer.py  melee.py
warcraftlogs_client/templates/: healing_report.md.j2
warcraftlogs_client/utils/: report_renderer.py
