[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warcraftlogs-analyzer"
version = "4.2.0"
description = "Analyze Warcraft Logs raid reports with role-based performance tracking"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "requests>=2.31.0",
    "jinja2>=3.1.2",
]

[project.optional-dependencies]
gui = ["PySide6>=6.6.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff", "mypy", "bandit[toml]", "pre-commit"]

[project.scripts]
warcraftlogs = "warcraftlogs_client.cli:main"

[project.gui-scripts]
warcraftlogs-gui = "warcraftlogs_client.gui.app:run"

[tool.setuptools.packages.find]
include = ["warcraftlogs_client*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "SIM", "C4", "RUF"]
ignore = ["E402", "E501", "E701", "SIM102", "SIM108", "SIM116"]

[tool.ruff.lint.per-file-ignores]
"warcraftlogs_client/gui/*" = ["B008", "RUF012"]
"tests/*" = ["B008", "RUF012", "SIM105", "SIM115"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B105", "B110", "B404", "B603", "B607", "B608"]

[tool.pytest.ini_options]
testpaths = ["tests"]
