[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "warcraftlogs-analyzer"
version = "4.2.0"
description = "Analyze Warcraft Logs raid reports with role-based performance tracking"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "requests>=2.31.0",
    "jinja2>=3.1.2",
]

[project.optional-dependencies]
gui = ["PySide6>=6.6.0", "pytest-qt>=4.2"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-bdd>=7.0",
    "hypothesis>=6.0",
    "pytest-xdist>=3.0",
    "ruff",
    "mypy",
    "bandit[toml]",
    "pre-commit",
    "vulture>=2.11",
    "pip-audit>=2.7",
    "codespell>=2.2",
    "radon>=6.0",
]

[project.scripts]
warcraftlogs = "warcraftlogs_client.cli:main"

[project.gui-scripts]
warcraftlogs-gui = "warcraftlogs_client.gui.app:run"

[tool.setuptools.packages.find]
include = ["warcraftlogs_client*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "SIM", "C4", "RUF"]
ignore = ["E402", "E501", "E701", "SIM102", "SIM108", "SIM116"]

[tool.ruff.lint.per-file-ignores]
"warcraftlogs_client/gui/*" = ["B008", "RUF012"]
"tests/*" = ["B008", "RUF012", "SIM105", "SIM115"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B105", "B110", "B404", "B603", "B607", "B608"]

[tool.pytest.ini_options]
testpaths = ["tests"]
bdd_features_base_dir = "tests/features/"
addopts = "--strict-markers"
markers = [
    "ears_event_driven: EARS event-driven requirement (When trigger, system shall respond)",
    "ears_ubiquitous: EARS ubiquitous requirement (system shall always behave this way)",
    "ears_unwanted_behavior: EARS unwanted-behavior requirement (If condition, system shall handle)",
    "ears_state_driven: EARS state-driven requirement (While state, system shall behave)",
    "ears_optional: EARS optional requirement (Where feature, system shall behave)",
    "database: Tests involving SQLite database operations",
    "api: Tests involving WCL API client or network calls",
    "auth: Tests involving authentication and token management",
    "reference: Tests for reference report comparison features",
    "gui: Tests requiring PySide6 GUI framework",
    "fuzz: Property-based fuzz tests using hypothesis",
    "security: Security-focused tests",
    "integration: Integration tests spanning multiple modules",
    "live: Tests hitting real external APIs (opt-in)",
    "slow: Tests that take significant time to run",
]

[tool.coverage.run]
source = ["warcraftlogs_client"]
omit = ["warcraftlogs_client/gui/*"]

[tool.coverage.report]
fail_under = 55
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.codespell]
skip = ".git,.venv,.mypy_cache,.ruff_cache,.pytest_cache,*.egg-info,build,dist,*.db,*.ico,*.png,*.csv,spell_data,reports,*.spec"
ignore-words-list = "casted,hist,sting,datas,levae"
count = true
quiet-level = 3

[tool.vulture]
paths = ["warcraftlogs_client", "vulture_whitelist.py"]
exclude = ["warcraftlogs_client/gui/"]
min_confidence = 80
